# container-status-exporter

./: .coveragerc  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  freshness.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: build-and-push.yml
docs/: DEPLOYMENT.md  IMPLEMENTATION.md  MANUAL_SETUP.md  QUICKSTART.md  START_HERE.md  SUMMARY.md  architecture.md  deployment.md
journal/: 260324-conformance-assessment.md  260324-offline-endpoint-handling.md  260712-engineering-team-hardening.md  260712-image-freshness.md  260713-base-image-freshness.md
tests/: conftest.py  test_api.py  test_collect_errors.py  test_contract.py  test_enums.py  test_escaping.py  test_exporter.py  test_freshness.py  test_handlers.py  test_metrics.py  test_offline_endpoints.py
